--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -26,8 +26,7 @@
     <div class="banner">
         <img src="imgs/banner_title.png" alt="" class="banner_title">
         <div class="banner_text" style="margin-top: 10px;font-size: 14px">
-            <span></span>
-            旨在为用户提供可靠的币币交易兑换服务
+            <span></span> 旨在为用户提供可靠的币币交易兑换服务
             <span></span>
         </div>
         <div class="banner_text" style="margin-top: 10px;">目前交易所无法进行法币充值服务，而BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，用户可以随时使用BitCNY或BitUSD和法币进行1:1兑换，价格稳定，不受市场波动影响，具有很强的便利性和实用性。</div>
@@ -48,22 +47,21 @@
             <a target="_blank" href="https://list.kkcoin.com/coin/teleinvite?t=k73fc9s9kpmnrfht">kkcoin.com</a>
             <a target="_blank" href="https://big.one/">big.one</a>
             <a target="_blank" href="http://u.cx/">u.cx</a>
-
         </div>
     </div>
     <div class="marquee">
         <div class="container flex" style="background-color: #FFFAE9;max-width: 1400px;padding-left: 10px;justify-content: center;">
             <span><img src="imgs/icon1.png" alt="" style="width: 16px;height:16px;"></span>
             <p>
-            本平台严格审核承兑商进驻标准，每一位承兑商都经过精挑细选，对本行业有一定的专业认知且从业时间长、操作熟练，可为您提供：BitCNY/BitUSD和法币的互相兑换。</p>
+                本平台严格审核承兑商进驻标准，每一位承兑商都经过精挑细选，对本行业有一定的专业认知且从业时间长、操作熟练，可为您提供：BitCNY/BitUSD和法币的互相兑换。</p>
         </div>
     </div>
     <div class="title1"><span></span>小二承兑认证商家<span></span></div>
     <div class="list flex container">
         <div class="li">
             <div class="name">小二极速快兑</div>
-            <p class="recharge">充值：<span>0.5%</span>   提现：<span>0.5%</span></p>
-            <p class="number">笔数：<span>79笔</span>   好评：<span>98.6%</span></p>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>79笔</span> 好评：<span>98.6%</span></p>
             <p class="recharge" style="margin-top: 20px">诚信快捷，网银打款秒到</p>
             <div class="way">
                 <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
@@ -74,191 +72,199 @@
                     <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                     <span>QQ交谈</span>
                 </a>
-          <!--   <div class="qq wx">
+                <!--   <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载二维码</a></div>
+            </div>
         </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载二维码</a></div>
-        </div>
-    </div>
-    <div class="li">
-        <div class="name">二哥速兑</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>68笔</span>  好评：<span>99.1%</span></p>
-        <p class="recharge" style="margin-top: 20px">安全可靠，承兑首选</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
+        <div class="li">
+            <div class="name">二哥速兑</div>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>68笔</span> 好评：<span>99.1%</span></p>
+            <p class="recharge" style="margin-top: 20px">安全可靠，承兑首选</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3322794536&version=1&src_type=web&web_src=oicqzone.com">
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3322794536&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-         <!--    <div class="qq wx">
+                <!--    <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
         </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
-        </div>
-    </div>
-    <div class="li">
-        <div class="name">小美承兑</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>40笔</span>  好评：<span>97.5%</span></p>
-        <p class="recharge" style="margin-top: 20px">快速稳定，专业兑换</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
+        <div class="li">
+            <div class="name">小美承兑</div>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>40笔</span> 好评：<span>97.5%</span></p>
+            <p class="recharge" style="margin-top: 20px">快速稳定，专业兑换</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1640602486&version=1&src_type=web&web_src=oicqzone.com">
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1640602486&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-        <!--     <div class="qq wx">
+                <!--     <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
         </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
-        </div>
-    </div>
-    <div class="li">
-        <div class="name">波波快兑</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>22笔</span>  好评：<span>95.9%</span></p>
-        <p class="recharge" style="margin-top: 20px">随时随地，极速到账</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
+        <div class="li">
+            <div class="name">波波快兑</div>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>22笔</span> 好评：<span>95.9%</span></p>
+            <p class="recharge" style="margin-top: 20px">随时随地，极速到账</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2440187242&version=1&src_type=web&web_src=oicqzone.com">
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2440187242&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-          <!--   <div class="qq wx">
+                <!--   <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
         </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
-        </div>
-    </div>
-    <div class="li">
-        <div class="name">多财秒兑</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>82笔</span>  好评：<span>96.6%</span></p>
-        <p class="recharge" style="margin-top: 20px">诚信高效，竭诚为您服务</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
+        <div class="li">
+            <div class="name">多财秒兑</div>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>82笔</span> 好评：<span>96.6%</span></p>
+            <p class="recharge" style="margin-top: 20px">诚信高效，竭诚为您服务</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2493130937&version=1&src_type=web&web_src=oicqzone.com">
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2493130937&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-         <!--    <div class="qq wx">
+                <!--    <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
         </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
-        </div>
-    </div>
-    <div class="li">
-        <div class="name">币多多</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>42笔</span>  好评：<span>98.9%</span></p>
-        <p class="recharge" style="margin-top: 20px">专业承兑，值得信赖</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
+        <div class="li">
+            <div class="name">币多多</div>
+            <p class="recharge">充值：<span>0.5%</span> 提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>42笔</span> 好评：<span>98.9%</span></p>
+            <p class="recharge" style="margin-top: 20px">专业承兑，值得信赖</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3109806311&version=1&src_type=web&web_src=oicqzone.com">
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3109806311&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
-         <!--    <div class="qq wx">
+                <!--    <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
             </div> -->
-        </div>
-        <div class="shadow">
-            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
-            <img src="imgs/code.png" alt="" class="code">
-            <p class='pc'>微信扫码，快捷沟通</p>
-            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
+            <div class="shadow">
+                <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+                <img src="imgs/code.png" alt="" class="code">
+                <p class='pc'>微信扫码，快捷沟通</p>
+                <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            </div>
         </div>
     </div>
-</div>
-<div class="diss">
-    <p>温馨提示：本平台不收取任何费用，承兑商会收取一定兑换手续费。该费率根据市场供需可能上浮或下调，各承兑商有所不同，具体请咨询承兑商。</p>
-</div>
-<div class="footer">
-    Copyright ©2018 小二承兑中心 All Rights Reserved
-</div>
-<div class="shadow">
-    <img src="imgs/arror.png" alt="" class="ico">
-    <p>戳右上角，选择在浏览器中打开即可开始承兑哦！</p>
-</div>
+    <div class="diss">
+        <p>温馨提示：本平台不收取任何费用，承兑商会收取一定兑换手续费。该费率根据市场供需可能上浮或下调，各承兑商有所不同，具体请咨询承兑商。</p>
+    </div>
+    <div class="footer">
+        Copyright ©2018 小二承兑中心 All Rights Reserved
+    </div>
+    <div class="wxtip">
+        <img src="imgs/weixin-tip.png" class="wxtip-icon">
+        <p class="wxtip-txt">
+            为了更好的浏览体验
+            <br/> 请选择在浏览器中打开
+        </p>
+        <img src="imgs/wx-logo.png" alt="" class="wx-logo">
+        <h2>小二承兑平台</h2>
+        <h3>提供可靠的币币交易兑换服务</h3>
+    </div>
 </body>
 <script>
-    $('.shadow').hide()
-    $('.wx').each(function(i,e) {
-        $(this).click(function(){
-            $('.shadow').eq(i).show()
-        })
+$('.wx').each(function(i, e) {
+    $(this).click(function() {
+        $('.shadow').eq(i).show()
     })
-    $('.close').each(function(i,e){
-        $(this).click(function(){
-         $('.shadow').eq(i).hide()
-     })
+})
+$('.close').each(function(i, e) {
+    $(this).click(function() {
+        $('.shadow').eq(i).hide()
     })
+})
 
-    isPc();
-    if(is_weixn()){
-        $('.shadow').show()
+isPc();
+if (is_weixn()) {
+    $('.wxtip').show()
+}
+
+function isPc() {
+    if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent) || /(Android)/i.test(navigator.userAgent)) {
+        $('.pc').hide()
+    } else {
+        $('.move').hide()
     }
-    function isPc(){
-        if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent) || /(Android)/i.test(navigator.userAgent)) {
-            $('.pc').hide()
-        } else {
-            $('.move').hide()
-        }
+}
+
+function is_weixn() {
+    var ua = navigator.userAgent.toLowerCase();
+    if (ua.match(/MicroMessenger/i) == "micromessenger") {
+        return true;
+    } else {
+        return false;
     }
-    function is_weixn() {
-        var ua = navigator.userAgent.toLowerCase();
-        if (ua.match(/MicroMessenger/i) == "micromessenger") {
-            return true;
-        } else {
-            return false;
-        }
-    }
+}
 </script>
+
 </html>
